Implement SPICE_MSG_WAIT_FOR_CHANNELS

https://bugs.freedesktop.org/show_bug.cgi?id=44179