gtk/spice-channel-priv.h
@@ -126,6 +126,7 @@ struct _SpiceChannelPrivate {
     GArray                      *remote_common_caps;
 
     gsize                       total_read_bytes;
+    uint64_t                    last_message_serial;
 };
 
 SpiceMsgIn *spice_msg_in_new(SpiceChannel *channel);
